--- a/g3/Properties/Resources.resx
+++ b/g3/Properties/Resources.resx
@@ -121,11 +121,26 @@
   <data name="b1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\b1.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="colourtest" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\colourtest.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="colourtest2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\colourtest2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dark.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dark2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="health" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\health.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="humanIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\humanicon.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lightmask" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightmask.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="r01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\r01.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
